src/test/deca/etapeB/invalid/assign_diff_type_float_bool.res
./src/test/deca/etapeB/invalid/assign_diff_type_float_bool.deca:8:2: type not expected
